--- a/user_conf.d/myportfolio.conf
+++ b/user_conf.d/myportfolio.conf
@@ -1,9 +1,9 @@
 server {
 	listen 80;
-	server_name jane-demo.duckdns.org
+	server_name jane-demo.duckdns.org;
 	
 	if ($host = jane-demo.duckdns.org) {
-		return 301 http://$host$request_uri;
+		return 301 https://$host$request_uri;
 	}
 }
 
