--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,36 +1,31 @@
-# This is a basic workflow to help you get started with Actions
-
-name: CI
-
-# Controls when the workflow will run
+name: Run Tests
 on:
-  # Triggers the workflow on push or pull request events but only for the "main" branch
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
-
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
+ push:
+  branches:
+   - main
+ pull_request:
+  branches:
+   - main
 jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
-    runs-on: ubuntu-latest
+ test:
+  runs-on: ubuntu-latest
+  name: Run Tests
+  env:
+   TESTING: true
+  steps:
+   - name: Checkout Repository
+     uses: actions/checkout@v2
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
-    steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v3
+   - name: Setup Python
+     uses: actions/setup-python@v4
+     with:
+      python-version: '3.8.8'
 
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
+   - name: Setup Python Virtual Environment
+     run: python -m venv python3-virtualenv
 
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+   - name: Install Dependencies
+     run: python3-virtualenv/bin/pip install -r requirements.txt
+
+   - name: Run Tests
+     run: ./run_test.sh
